--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,32 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:insert="fragments.html :: headerfiles"> </head>
+>
+<head th:insert="fragments.html :: headerfiles"></head>
 <body>
-    <header th:insert="fragments.html :: nav"></header>
-    <div class="container">
-        <h1 class="display-5">Поступившие работы</h1>
+<header th:insert="fragments.html :: nav"></header>
+<div class="container">
+  <h1 class="display-5">Поступившие работы</h1>
 
-        <div class="d-flex justify-content-start p-2">
-            <a class="list-group-item mr-2" href="#" th:href="@{/allProduct}">Все документы</a>
-<!--            <a class="list-group-item mr-2"	th:each="category : ${categoryList}"-->
-<!--               th:text="${category.categoryName}" href="#" th:href="@{'/getProducts/' + ${category.categoryId}}"></a>-->
+  <div class="d-flex justify-content-start p-2">
+    <a class="list-group-item mr-2" href="#" th:href="@{/allProduct}">Все документы</a>
+    <!--            <a class="list-group-item mr-2"	th:each="category : ${categoryList}"-->
+    <!--               th:text="${category.categoryName}" href="#" th:href="@{'/getProducts/' + ${category.categoryId}}"></a>-->
+  </div>
+
+  <div class="row">
+    <div class="col-sm-4" th:each="book : ${booksList}">
+      <div class="card mt-4">
+        <img src="" class="card-img-top" alt="Book cover">
+        <div class="card-body">
+          <h5 th:text="${book.getTitle()}" class="card-title"></h5>
+          <h6 th:text="${book.getAuthor()}" class="card-text"></h6>
+          <p th:text="${book.getAgeLimit()}+'+'" class="card-text"></p>
+          <!--                        <a href="#" th:href="@{'~/profile/addToCart/' + ${product.productId}}" class="btn btn-primary">Add to cart</a>-->
         </div>
-
-        <div class="row">
-<!--            <div class="col-sm-4" th:each="product : ${productList}">-->
-<!--                <div class="card mt-4">-->
-<!--                    <img th:src="${product.image}" class="card-img-top" alt="Product image">-->
-<!--                    <div class="card-body">-->
-<!--                        <h5 th:text="${product.productName}" class="card-title"></h5>-->
-<!--                        <p th:text="${product.productDescription}" class="card-text"></p>-->
-<!--                        <p th:text="'$ '+${product.productPrice}" class="card-text"></p>-->
-<!--                        <a href="#" th:href="@{'~/profile/addToCart/' + ${product.productId}}" class="btn btn-primary">Add to cart</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-        </div>
-
+      </div>
     </div>
+  </div>
+
+</div>
+
+
+<script>
+  function randomInteger(min, max) {
+    // случайное число от min до (max+1)
+    let rand = min + Math.random() * (max + 1 - min);
+    return Math.floor(rand);
+  }
+
+  let images = document.getElementsByTagName('img');
+
+  for (let i = 0; i < images.length; i++) {
+    images[i].src = `https://picsum.photos/200/300?random=${randomInteger(1, 100)}`;
+  }
+
+</script>
 </body>
 </html>
