--- a/src/main/resources/templates/edited_texts.html
+++ b/src/main/resources/templates/edited_texts.html
@@ -11,7 +11,7 @@
     <!--    <a class="list-group-item mr-2" href="#" th:href="@{/allProduct}">Все документы</a>-->
     <a class="list-group-item mr-2" href="#" th:href="@{/}">Книги</a>
     <a class="list-group-item mr-2" href="#" th:href="@{/edited-texts}">Отредактированные тексты</a>
-    <a class="list-group-item mr-2" href="#" th:href="@{/allProduct}">Черновики</a>
+    <a class="list-group-item mr-2" href="#" th:href="@{/drafts}">Черновики</a>
     <!--            <a class="list-group-item mr-2"	th:each="category : ${categoryList}"-->
     <!--               th:text="${category.categoryName}" href="#" th:href="@{'/getProducts/' + ${category.categoryId}}"></a>-->
   </div>
