--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -5,7 +5,7 @@
 <!-- Fragment #1 : Header files (css and js references) -->
 <head th:fragment="headerfiles">
   <meta charset="UTF-8">
-  <title>Electronics shop</title>
+  <title>Книжное агенство</title>
   <link th:href="@{~/bootstrap.min.css}" rel="stylesheet">
   <link th:href="@{~/fontawesome/css/all.css}" rel="stylesheet">
 </head>
@@ -30,10 +30,19 @@
             <a class="nav-link" href="#" th:href="@{/manager/index}">Управление</a>
           </li>
         </ul>
-        <ul class="nav my-auto mr-4">
-          <li class="nav-item"><a href="#" class="text-info" th:href="@{/profile/cart-product}"><i
-              class="fas fa-shopping-cart"></i></a></li>
-        </ul>
+
+        <!--        <ul class="nav my-auto mr-4">-->
+        <!--          <li class="nav-item"><a href="#" class="text-info" th:href="@{/profile/cart-product}"><i-->
+        <!--              class="fas fa-shopping-cart"></i></a></li>-->
+        <!--        </ul>-->
+
+        <form class="form-inline my-2 my-lg-0" form-method="get"
+              th:action="@{/signup}">
+          <button class="btn btn-outline-success my-2 mx-2 my-sm-0 btn-sm" type="submit">
+            Зарегистрироваться
+          </button>
+        </form>
+
         <form class="form-inline my-2 my-lg-0" form-method="post"
               th:action="@{/logout}">
           <button sec:authorize="isAuthenticated()"
