--- a/src/main/resources/templates/manager/index.html
+++ b/src/main/resources/templates/manager/index.html
@@ -5,14 +5,15 @@
   <header th:insert="fragments.html :: nav"></header>
 
   <div class="container">
-    <h1 class="display-4 my-2" th:text ="'Welcome ' + ${#authentication.getPrincipal().getFirstName()}"></h1>
+    <h1 class="display-4 my-2"
+        th:text="'Добро пожаловать, ' + ${#authentication.getPrincipal().getFirstName()}"></h1>
     <hr>
     <div class="row">
       <div class="list-group list-group-flush col-5">
         <a class="list-group-item list-group-item-action"
            href="#" th:href="@{/manager/category-form}">Manage Category</a>
         <a class="list-group-item list-group-item-action"
-           href="#" th:href="@{/manager/product-form}">Manage Product</a>
+           href="#" th:href="@{/manager/book-form}">Список книг</a>
       </div>
     </div>
   </div>
