--- a/src/main/resources/templates/admin/add-user.html
+++ b/src/main/resources/templates/admin/add-user.html
@@ -7,42 +7,55 @@
   <header th:insert="fragments.html :: nav"></header>
 
   <div class="container">
-    <div style="width: 600px; margin-left: auto; margin-right: auto; margin-top: 24px; padding: 24px;">
+    <div class="list-group list-group-flush col-5 my-5">
+      <a class="list-group-item list-group-item-action"
+         href="#" th:href="@{/admin/add-user}">Добавить пользователя</a>
+      <a class="list-group-item list-group-item-action"
+         href="#" th:href="@{/admin/user-list}">Список пользователей</a>
+    </div>
+
+    <div
+        style="width: 600px; margin-left: auto; margin-right: auto; margin-top: 24px; padding: 24px;">
       <div class="card">
         <div class="card-header">
-          <i class="fa fa-user"></i> Sign up
+          <i class="fa fa-user"></i> Добавить пользователя
         </div>
         <div class="card-block" style="padding: 24px;">
           <form th:action="@{/signup}" method="post">
             <fieldset>
 
               <div class="form-group">
-                <label for="firstName">First name</label>
-                <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First name">
+                <label for="firstName">Имя</label>
+                <input type="text" class="form-control" id="firstName" name="firstName"
+                       placeholder="Иван">
               </div>
 
               <div class="form-group">
-                <label for="lastName">Last name</label>
-                <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last name">
+                <label for="lastName">Фамилия</label>
+                <input type="text" class="form-control" id="lastName" name="lastName"
+                       placeholder="Иванов">
               </div>
 
               <div class="form-group">
                 <label for="email">Email</label>
-                <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+                <input type="email" class="form-control" id="email" name="email"
+                       placeholder="email@example.com">
               </div>
 
               <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+                <label for="password">Пароль</label>
+                <input type="password" class="form-control" id="password" name="password"
+                       placeholder="Password_123">
               </div>
 
               <div class="form-group">
-                <label for="role">Role</label>
-                <input type="text" class="form-control" id="role" name="role" placeholder="Role">
+                <label for="role">Роль</label>
+                <input type="text" class="form-control" id="role" name="role"
+                       placeholder="ADMIN / MANAGER / USER">
               </div>
 
               <div class="form-actions" style="margin-top: 12px;">
-                <button type="submit" class="btn btn-success">Sign up</button>
+                <button type="submit" class="btn btn-success">Зарегистрировать</button>
               </div>
             </fieldset>
           </form>
