--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -6,18 +6,15 @@
 <body>
 <header th:insert="fragments.html :: nav"></header>
     <div class="container">
-        <h1 class="display-4 my-2" th:text ="'Welcome ' + ${#authentication.getPrincipal().getFirstName()}"></h1>
+        <h1 class="display-4 my-2"
+            th:text="'Добро пожаловать, ' + ${#authentication.getPrincipal().getFirstName()}"></h1>
         <hr>
         <div class="row">
             <div class="list-group list-group-flush col-5">
                 <a class="list-group-item list-group-item-action"
-                   href="#" th:href="@{/manager/category-form}">Manage Category</a>
+                   href="#" th:href="@{/admin/add-user}">Добавить пользователя</a>
                 <a class="list-group-item list-group-item-action"
-                   href="#" th:href="@{/manager/product-form}">Manage Product</a>
-                <a class="list-group-item list-group-item-action"
-                   href="#" th:href="@{/admin/add-user}">Add Admin/Manager</a>
-                <a class="list-group-item list-group-item-action"
-                   href="#" th:href="@{/admin/user-list}">User/Manager/Admin List</a>
+                   href="#" th:href="@{/admin/user-list}">Список пользователей</a>
             </div>
         </div>
     </div>
