--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -23,6 +23,7 @@
             <a class="nav-link" href="#" th:href="@{/index}"><i class="fa fa-home mr-2"></i>Главная</a>
           </li>
           <li sec:authorize="hasAnyRole('ROLE_MANAGER','ROLE_ADMIN')" class="nav-item">
+            <!-- TODO: переименовать в "Работы" (?) -->
             <a class="nav-link" href="#" th:href="@{/manager/index}">Управление</a>
           </li>
           <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
