--- a/src/main/resources/templates/manager/book-form.html
+++ b/src/main/resources/templates/manager/book-form.html
@@ -10,7 +10,9 @@
   <div class="row my-5">
     <div class="list-group list-group-flush col-5">
       <a class="list-group-item list-group-item-action"
-         href="#" th:href="@{/manager/category-form}">Manage Category</a>
+         href="#" th:href="@{/manager/draft-form}">Список черновиков</a>
+      <a class="list-group-item list-group-item-action"
+         href="#" th:href="@{/manager/edited-text-form}">Список отредактированных работ</a>
       <a class="list-group-item list-group-item-action"
          href="#" th:href="@{/manager/book-form}">Список книг</a>
     </div>
