Add: Draft CRUD

--- a/src/main/resources/templates/drafts.html
+++ b/src/main/resources/templates/drafts.html
@@ -39,13 +39,25 @@
       case 'Got':
         status.style.color = '#4682B4';
         break;
+      case 'Получен':
+        status.style.color = '#4682B4';
+        break;
       case 'In Progress':
+        status.style.color = '#FFD700';
+        break;
+      case 'В процессе':
         status.style.color = '#FFD700';
         break;
       case 'Accepted':
         status.style.color = '#008000';
         break;
+      case 'Принят':
+        status.style.color = '#008000';
+        break;
       case 'Rejected':
+        status.style.color = '#8B0000';
+        break;
+      case 'Отклонен':
         status.style.color = '#8B0000';
         break;
     }
