--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -33,7 +33,8 @@
 
         <form class="form-inline my-2 my-lg-0" form-method="get"
               th:action="@{/signup}">
-          <button class="btn btn-outline-success my-2 mx-2 my-sm-0 btn-sm" type="submit">
+          <button sec:authorize="isAnonymous()"
+                  class="btn btn-outline-success my-2 mx-2 my-sm-0 btn-sm" type="submit">
             Зарегистрироваться
           </button>
         </form>
