Add: Edited texts search filter

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
   <div class="d-flex justify-content-between p-2">
     <form th:action="@{/search-books-by-author}" method="get" enctype="multipart/form-data">
       <div class="form-group">
-        <div class="input-group mb-3">
+        <div class="input-group my-3">
           <div class="input-group-prepend">
             <span class="input-group-text" id="inputGroup-sizing-default">Автор</span>
           </div>
@@ -28,7 +28,7 @@
 
     <form th:action="@{/search-books-by-title}" method="get" enctype="multipart/form-data">
       <div class="form-group">
-        <div class="input-group mb-3">
+        <div class="input-group my-3">
           <div class="input-group-prepend">
             <span class="input-group-text" id="inputGroup-sizing-default">Название</span>
           </div>
@@ -45,7 +45,7 @@
 
     <form th:action="@{/search-books-by-age-limit}" method="get" enctype="multipart/form-data">
       <div class="form-group">
-        <div class="input-group mb-3">
+        <div class="input-group my-3">
           <div class="input-group-prepend">
             <span class="input-group-text"
                   id="inputGroup-sizing-default">Возрастное ограничение</span>
