--- a/src/main/resources/templates/edited_texts.html
+++ b/src/main/resources/templates/edited_texts.html
@@ -8,6 +8,25 @@
 
   <div th:insert="fragments.html :: main-page-nav"></div>
 
+  <div class="d-flex justify-content-between p-2">
+    <form th:action="@{/search-edited-texts-by-author}" method="get" enctype="multipart/form-data">
+      <div class="form-inline">
+        <div class="input-group my-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="inputGroup-sizing-default">Автор</span>
+          </div>
+          <input type="text" class="form-control" name="author" placeholder="Иванов И.И."
+                 aria-label="Default"
+                 aria-describedby="inputGroup-sizing-default">
+        </div>
+
+        <div class="form-actions">
+          <button type="submit" class="btn btn-info mx-2 my-3">Результаты</button>
+        </div>
+      </div>
+    </form>
+  </div>
+
   <div class="row">
     <div class="col-sm-4" th:each="editedText : ${editedTextsList}">
       <div class="card mt-4">
