--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -15,7 +15,7 @@
 <div th:fragment="nav">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Книжное агенство</a>
+      <a class="navbar-brand" href="#" th:href="@{~/}">Книжное агенство</a>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
