--- a/src/main/resources/templates/drafts.html
+++ b/src/main/resources/templates/drafts.html
@@ -9,6 +9,59 @@
 
   <div th:insert="fragments.html :: main-page-nav"></div>
 
+  <div class="d-flex justify-content-between p-2">
+    <form th:action="@{/search-drafts-by-status}" method="get" enctype="multipart/form-data">
+      <div class="form-inline">
+        <div class="form-group">
+          <select class="custom-select" id="status" name="status">
+            <option>Получен</option>
+            <option>В процессе</option>
+            <option>Принят</option>
+            <option>Отклонен</option>
+          </select>
+        </div>
+
+        <div class="form-actions">
+          <button type="submit" class="btn btn-info mx-2 my-3">Результаты</button>
+        </div>
+      </div>
+    </form>
+
+    <form th:action="@{/search-drafts-by-title}" method="get" enctype="multipart/form-data">
+      <div class="form-inline">
+        <div class="input-group my-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="inputGroup-sizing-default">Название</span>
+          </div>
+          <input type="text" class="form-control" name="title" placeholder="Черновик"
+                 aria-label="Default"
+                 aria-describedby="inputGroup-sizing-default">
+        </div>
+
+        <div class="form-actions">
+          <button type="submit" class="btn btn-info mx-2 my-3">Результаты</button>
+        </div>
+      </div>
+    </form>
+
+    <form th:action="@{/search-drafts-by-author}" method="get" enctype="multipart/form-data">
+      <div class="form-inline">
+        <div class="input-group my-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="inputGroup-sizing-default">Автор</span>
+          </div>
+          <input type="text" class="form-control" name="author" placeholder="Иванов И.И."
+                 aria-label="Default"
+                 aria-describedby="inputGroup-sizing-default">
+        </div>
+
+        <div class="form-actions">
+          <button type="submit" class="btn btn-info mx-2 my-3">Результаты</button>
+        </div>
+      </div>
+    </form>
+  </div>
+
   <div class="row">
     <div class="col-sm-4" th:each="draft : ${draftsList}">
       <div class="card mt-4">
