--- a/src/main/resources/templates/manager/book-form.html
+++ b/src/main/resources/templates/manager/book-form.html
@@ -13,7 +13,7 @@
          href="#" th:href="@{/manager/draft-form}">Список черновиков</a>
       <a class="list-group-item list-group-item-action"
          href="#" th:href="@{/manager/edited-text-form}">Список отредактированных работ</a>
-      <a class="list-group-item list-group-item-action"
+      <a class="list-group-item list-group-item-action font-weight-bold"
          href="#" th:href="@{/manager/book-form}">Список книг</a>
     </div>
   </div>
