--- a/src/main/resources/templates/manager/layout-form.html
+++ b/src/main/resources/templates/manager/layout-form.html
@@ -14,7 +14,7 @@
          href="#" th:href="@{/manager/archive-form}">Архивы</a>
       <a class="list-group-item list-group-item-action"
          href="#" th:href="@{/manager/requirements-form}">Требования к публикации</a>
-      <a class="list-group-item list-group-item-action"
+      <a class="list-group-item list-group-item-action font-weight-bold"
          href="#" th:href="@{/manager/layout-form}">Макеты</a>
     </div>
   </div>
