--- a/src/main/resources/templates/admin/user-list.html
+++ b/src/main/resources/templates/admin/user-list.html
@@ -10,7 +10,7 @@
           <div class="list-group list-group-flush col-5">
               <a class="list-group-item list-group-item-action"
                  href="#" th:href="@{/admin/add-user}">Добавить пользователя</a>
-              <a class="list-group-item list-group-item-action"
+              <a class="list-group-item list-group-item-action font-weight-bold"
                  href="#" th:href="@{/admin/user-list}">Список пользователей</a>
           </div>
 
@@ -27,13 +27,13 @@
               </thead>
               <tbody>
               <tr th:each="user : ${userList}">
-                  <th scope="row" th:text="${user.getUserId()}"></th>
+                  <th scope="row" th:text="${user.getId()}"></th>
                   <td th:text="${user.getFirstName()}"></td>
                   <td th:text="${user.getLastName()}"></td>
                   <td th:text="${user.getEmail()}"></td>
                   <td th:text="${user.getRole()}"></td>
                   <td>
-                      <a href="#" th:href="@{'/admin/delete-user/'+ ${user.getUserId()}}"
+                      <a href="#" th:href="@{'/admin/delete-user/'+ ${user.getId()}}"
                          class="btn btn-danger">Удалить</a>
                   </td>
               </tr>
