--- a/src/main/resources/templates/manager/archive-form.html
+++ b/src/main/resources/templates/manager/archive-form.html
@@ -10,7 +10,7 @@
     <div class="list-group list-group-flush col-5 my-3">
       <a class="list-group-item list-group-item-action"
          href="#" th:href="@{/manager/shop-form}">Магазины</a>
-      <a class="list-group-item list-group-item-action"
+      <a class="list-group-item list-group-item-action font-weight-bold"
          href="#" th:href="@{/manager/archive-form}">Архивы</a>
       <a class="list-group-item list-group-item-action"
          href="#" th:href="@{/manager/requirements-form}">Требования к публикации</a>
