--- a/src/main/resources/templates/manager/draft-form.html
+++ b/src/main/resources/templates/manager/draft-form.html
@@ -9,7 +9,7 @@
 <div class="container">
   <div class="row my-5">
     <div class="list-group list-group-flush col-5">
-      <a class="list-group-item list-group-item-action"
+      <a class="list-group-item list-group-item-action font-weight-bold"
          href="#" th:href="@{/manager/draft-form}">Список черновиков</a>
       <a class="list-group-item list-group-item-action"
          href="#" th:href="@{/manager/edited-text-form}">Список отредактированных работ</a>
