--- a/src/main/resources/templates/manager/edited-text-form.html
+++ b/src/main/resources/templates/manager/edited-text-form.html
@@ -11,7 +11,7 @@
     <div class="list-group list-group-flush col-5">
       <a class="list-group-item list-group-item-action"
          href="#" th:href="@{/manager/draft-form}">Список черновиков</a>
-      <a class="list-group-item list-group-item-action"
+      <a class="list-group-item list-group-item-action font-weight-bold"
          href="#" th:href="@{/manager/edited-text-form}">Список отредактированных работ</a>
       <a class="list-group-item list-group-item-action"
          href="#" th:href="@{/manager/book-form}">Список книг</a>
